@@ -2,23 +2,26 @@ package org.simdjson;
 
 import com.alibaba.fastjson2.JSON;
 import com.alibaba.fastjson2.JSONObject;
+import com.fasterxml.jackson.core.JsonToken;
+import com.fasterxml.jackson.core.SerializableString;
+import com.fasterxml.jackson.core.io.SerializedString;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.github.plokhotnyuk.jsoniter_scala.core.ReaderConfig$;
 import com.github.plokhotnyuk.jsoniter_scala.core.package$;
 import com.jsoniter.JsonIterator;
 import com.jsoniter.any.Any;
-import org.openjdk.jmh.annotations.Benchmark;
-import org.openjdk.jmh.annotations.BenchmarkMode;
-import org.openjdk.jmh.annotations.Level;
-import org.openjdk.jmh.annotations.Mode;
-import org.openjdk.jmh.annotations.OutputTimeUnit;
-import org.openjdk.jmh.annotations.Scope;
-import org.openjdk.jmh.annotations.Setup;
-import org.openjdk.jmh.annotations.State;
+import org.openjdk.jmh.annotations.*;
+import org.simdjson.kora.$Twitter_JsonReader;
+import org.simdjson.kora.$Twitter_Status_JsonReader;
+import org.simdjson.kora.$Twitter_User_JsonReader;
+import ru.tinkoff.kora.json.common.JsonCommonModule;
+import ru.tinkoff.kora.json.common.JsonReader;
+import ru.tinkoff.kora.json.common.ListJsonReader;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.Set;
@@ -29,10 +32,20 @@ import static org.simdjson.SimdJsonPaddingUtil.padded;
 @State(Scope.Benchmark)
 @BenchmarkMode(Mode.Throughput)
 @OutputTimeUnit(TimeUnit.SECONDS)
+@Warmup(iterations = 3, time = 5)
+@Measurement(iterations = 1, time = 5)
+@Fork(value = 1, jvmArgsPrepend = {"--add-modules=jdk.incubator.vector"})
 public class ParseAndSelectBenchmark {
 
     private final SimdJsonParser simdJsonParser = new SimdJsonParser();
     private final ObjectMapper objectMapper = new ObjectMapper();
+    private final JsonReader<org.simdjson.kora.Twitter> koraReader = new $Twitter_JsonReader(
+        new ListJsonReader<>(
+            new $Twitter_Status_JsonReader(
+                new $Twitter_User_JsonReader()
+            )
+        )
+    );
 
     private byte[] buffer;
     private byte[] bufferPadded;
@@ -49,7 +62,7 @@ public class ParseAndSelectBenchmark {
     public int countUniqueUsersWithDefaultProfile_jsoniter_scala() throws IOException {
         Twitter twitter = package$.MODULE$.readFromArray(buffer, ReaderConfig$.MODULE$, Twitter$.MODULE$.codec());
         Set<String> defaultUsers = new HashSet<>();
-        for (Status tweet: twitter.statuses()) {
+        for (Status tweet : twitter.statuses()) {
             User user = tweet.user();
             if (user.default_profile()) {
                 defaultUsers.add(user.screen_name());
@@ -58,7 +71,7 @@ public class ParseAndSelectBenchmark {
         return defaultUsers.size();
     }
 
-    @Benchmark
+//    @Benchmark
     public int countUniqueUsersWithDefaultProfile_jackson() throws IOException {
         JsonNode jacksonJsonNode = objectMapper.readTree(buffer);
         Set<String> defaultUsers = new HashSet<>();
@@ -74,6 +87,20 @@ public class ParseAndSelectBenchmark {
     }
 
     @Benchmark
+    public int countUniqueUsersWithDefaultProfile_kora() throws IOException {
+        var twitter = koraReader.read(buffer);
+        Set<String> defaultUsers = new HashSet<>();
+        for (var tweet : twitter.statuses()) {
+            var user = tweet.user();
+            if (user.defaultProfile()) {
+                defaultUsers.add(user.screenName());
+            }
+        }
+        return defaultUsers.size();
+    }
+
+
+    //    @Benchmark
     public int countUniqueUsersWithDefaultProfile_fastjson() {
         JSONObject jsonObject = (JSONObject) JSON.parse(buffer);
         Set<String> defaultUsers = new HashSet<>();
@@ -88,7 +115,7 @@ public class ParseAndSelectBenchmark {
         return defaultUsers.size();
     }
 
-    @Benchmark
+    //    @Benchmark
     public int countUniqueUsersWithDefaultProfile_jsoniter() {
         Any json = JsonIterator.deserialize(buffer);
         Set<String> defaultUsers = new HashSet<>();
@@ -101,22 +128,27 @@ public class ParseAndSelectBenchmark {
         return defaultUsers.size();
     }
 
+    private static final byte[] statuses = "statuses".getBytes(StandardCharsets.UTF_8);
+    private static final byte[] user = "user".getBytes(StandardCharsets.UTF_8);
+    private static final byte[] default_profile = "default_profile".getBytes(StandardCharsets.UTF_8);
+    private static final byte[] screen_name = "screen_name".getBytes(StandardCharsets.UTF_8);
+
     @Benchmark
     public int countUniqueUsersWithDefaultProfile_simdjson() {
         JsonValue simdJsonValue = simdJsonParser.parse(buffer, buffer.length);
         Set<String> defaultUsers = new HashSet<>();
-        Iterator<JsonValue> tweets = simdJsonValue.get("statuses").arrayIterator();
+        Iterator<JsonValue> tweets = simdJsonValue.get(statuses).arrayIterator();
         while (tweets.hasNext()) {
             JsonValue tweet = tweets.next();
-            JsonValue user = tweet.get("user");
-            if (user.get("default_profile").asBoolean()) {
-                defaultUsers.add(user.get("screen_name").asString());
+            JsonValue user = tweet.get(ParseAndSelectBenchmark.user);
+            if (user.get(default_profile).asBoolean()) {
+                defaultUsers.add(user.get(screen_name).asString());
             }
         }
         return defaultUsers.size();
     }
 
-    @Benchmark
+    //    @Benchmark
     public int countUniqueUsersWithDefaultProfile_simdjsonPadded() {
         JsonValue simdJsonValue = simdJsonParser.parse(bufferPadded, buffer.length);
         Set<String> defaultUsers = new HashSet<>();
